--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,7 @@
 title: "Activity"
 author: "Praveen"
 date: "14 August 2015"
-output: pdf_document
+output: html_document
 ---
 ```{r}
 library(ggplot2)
